--- a/src/Stylesheets/Home.css
+++ b/src/Stylesheets/Home.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap");
 
 .home {
-  /* background: url("../Photos/background.jpeg"); */
-  background: #000;
+  background: url("../Photos/background.jpeg");
+  /* background: #000; */
   height: 100vh;
   width: 100%;
   background-size: contain;
