--- a/src/Stylesheets/Services.css
+++ b/src/Stylesheets/Services.css
@@ -5,41 +5,42 @@
   list-style: none;
   text-decoration: none;
 }
-hr {
-  width: 95%;
-  height: 1.5px;
-  background: #000;
-  position: absolute;
-  top: 79%;
-  left: 4%;
-}
+
 .container-box {
   font-family: "Dancing Script", cursive;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  background: #fff;
+}
+.box {
   position: relative;
+  width: 100%;
+  height: 100px;
 }
 .box h1 {
-  text-align: center;
   position: absolute;
-  top: 5%;
-  left: 41%;
+  top: 20%;
+  left: 40%;
   font-size: 40px;
   text-decoration: underline;
+  color: #000;
 }
 .offers {
-  position: absolute;
-  top: 15%;
-  left: 11%;
   display: flex;
+  position: relative;
 }
-.cards {
-  display: flex;
+
+.offers .cards {
+  width: 500px;
   margin: 20px;
-  width: 550px;
   background: #000;
   border-radius: 10px;
   position: relative;
+  left: 15%;
+}
+.cards:hover {
+  cursor: pointer;
+  
 }
 .imgs img {
   width: 200px;
@@ -48,33 +49,34 @@ hr {
   border: 5px solid yellow;
   margin: 14px;
 }
-.contents {
-  color: #fff;
-}
+
 .contents h2 {
-  font-size: 2.5rem;
+  color: #fff;
+  font-size: 35px;
   position: absolute;
-  top: 15%;
-  left: 43%;
+  top: 22%;
+  left: 48%;
 }
 .contents p {
-  font-size: 27px;
+  font-size: 24px;
+  color: #fff;
   position: absolute;
-  top: 40%;
-  left: 44%;
+  top: 48%;
+  left: 50%;
 }
 .order-btn {
-  padding: 15px 40px;
+  padding: 12px 22px;
   border-radius: 45px;
   border: none;
-  position: absolute;
-  top: 64%;
-  left: 44%;
   background: yellow;
-  font-size: 23px;
+  font-size: 20px;
+  position: absolute;
+  top: 68%;
+  left: 47%;
 }
 .order-btn:hover {
   cursor: pointer;
+  transform: translateY(-5px);
 }
 i {
   font-size: 20px;
@@ -84,19 +86,143 @@ i {
 .menu-heading {
   width: 100%;
   height: 100vh;
-  
+  position: relative;
+  background: #fff;
+  font-family: "Dancing Script", cursive;
 }
+
 .heading h1 {
   position: absolute;
-  top: 65%;
+  top: 4%;
   left: 45%;
   font-size: 40px;
   word-spacing: 8px;
   text-decoration: underline;
 }
+
 .heading p {
   position: absolute;
+  top: 15%;
+  left: 6%;
+  font-size: 25px;
+  font-weight: bolder;
+  
+}
+.main-course {
+  border: 2px solid black;
+  width: 250px;
+  height: 370px;
+  margin: 10px;
+  display: inline-block;
+  position: relative;
+  top: 23%;
+  left: 6%;
+  border-radius: 8%;
+}
+.main-course:hover {
+  transform: translateX(-10px);
+  box-shadow: 3px 5px yellowgreen;
+  cursor: pointer;
+}
+
+.course img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 5px solid yellow;
+  position: absolute;
+  left: 7%;
+  top: 2%;
+}
+.course-name h1 {
+  position: absolute;
+  top: 63%;
+  left: 20%;
+}
+.course-name p {
+  position: absolute;
   top: 75%;
-  left: 4%;
+  left: 34%;
+  font-weight: bolder;
+}
+.order-course {
+  padding: 10px 35px;
+  background: #e7d700;
+  position: absolute;
+  left: 21%;
+  top: 86%;
+  border-radius: 10px;
   font-size: 20px;
+}
+.order-course:hover {
+  background: yellowgreen;
+}
+
+
+
+/* second menu */
+.menu-headings {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background: #fff;
+  font-family: "Dancing Script", cursive;
+}
+
+.headings p {
+  position: absolute;
+  top: 15%;
+  left: 6%;
+  font-size: 25px;
+  font-weight: bolder;
+  
+}
+.main-courses {
+  border: 2px solid black;
+  width: 250px;
+  height: 370px;
+  margin: 10px;
+  display: inline-block;
+  position: relative;
+  top: 23%;
+  left: 6%;
+  border-radius: 8%;
+}
+.main-courses:hover {
+  transform: translateX(-10px);
+  box-shadow: 3px 5px yellowgreen;
+  cursor: pointer;
+}
+
+.courses img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 5px solid yellow;
+  position: absolute;
+  left: 7%;
+  top: 2%;
+}
+.course-names h1 {
+  position: absolute;
+  top: 63%;
+  left: 20%;
+}
+.course-names p {
+  position: absolute;
+  top: 75%;
+  left: 34%;
+  font-weight: bolder;
+}
+.order-courses {
+  padding: 10px 35px;
+  background: #e7d700;
+  position: absolute;
+  left: 21%;
+  top: 86%;
+  border-radius: 10px;
+  font-size: 20px;
+}
+.order-courses:hover {
+  background: yellowgreen;
 }
