--- a/src/Stylesheets/Order.css
+++ b/src/Stylesheets/Order.css
@@ -6,7 +6,7 @@
   position: relative;
   font-family: "Dancing Script", cursive;
 }
-.order-box h1{
+.order-box h1 {
   text-align: center;
   position: absolute;
   top: 7%;
@@ -38,4 +38,17 @@ form input {
 }
 .sbt:hover {
   background: orange;
+}
+.top i {
+  font-size: 40px;
+  position: absolute;
+  left: 95%;
+  top: 85%;
+  cursor: pointer;
+  border: 1px solid #000;
+  padding: 5px 8px;
+  border-radius: 45px;
+}
+.top i:hover{
+  background: #fff000;
 }
